feat: enhance authentication flow with cookie-based token management and refactor response structures