@@ -2,7 +2,6 @@ package nelon.arrive.nelonshift.services;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import nelon.arrive.nelonshift.dto.DailyEarningsDto;
 import nelon.arrive.nelonshift.dto.DashboardStatsDto;
 import nelon.arrive.nelonshift.dto.TopProjectDto;
 import nelon.arrive.nelonshift.entity.Project;
@@ -17,7 +16,9 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.YearMonth;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
@@ -48,7 +49,7 @@ public class DashboardService implements IDashboardService {
 		
 		List<Shift> allShifts = allProjects.stream()
 			.flatMap(p -> p.getShifts().stream())
-			.collect(Collectors.toList());
+			.toList();
 		
 		int totalShifts = allShifts.size();
 		
@@ -82,22 +83,6 @@ public class DashboardService implements IDashboardService {
 			.filter(Objects::nonNull)
 			.reduce(0, Integer::sum);
 		
-		// Прошлый месяц для сравнения
-		YearMonth previousMonth = currentMonth.minusMonths(1);
-		LocalDate prevMonthStart = previousMonth.atDay(1);
-		LocalDate prevMonthEnd = previousMonth.atEndOfMonth();
-		
-		BigDecimal previousMonthEarnings = allShifts.stream()
-			.filter(s -> !s.getDate().isBefore(prevMonthStart) && !s.getDate().isAfter(prevMonthEnd))
-			.map(Shift::getTotalPay)
-			.reduce(BigDecimal.ZERO, BigDecimal::add);
-		
-		// Процент изменения
-		int earningsChangePercentage = calculateChangePercentage(
-			currentMonthEarnings,
-			previousMonthEarnings
-		);
-		
 		// ===== ТОП-3 ПРОЕКТОВ =====
 		
 		List<TopProjectDto> topProjects = allProjects.stream()
@@ -106,10 +91,6 @@ public class DashboardService implements IDashboardService {
 			.sorted((a, b) -> b.getTotalEarnings().compareTo(a.getTotalEarnings()))
 			.limit(3)
 			.collect(Collectors.toList());
-		
-		// ===== ГРАФИК ПО ДНЯМ (последние 7 дней) =====
-		
-		List<DailyEarningsDto> dailyEarnings = calculateDailyEarnings(allShifts);
 		
 		// ===== СОБИРАЕМ DTO =====
 		
@@ -122,9 +103,7 @@ public class DashboardService implements IDashboardService {
 			.currentMonthEarnings(currentMonthEarnings)
 			.currentMonthShifts(currentMonthShiftCount)
 			.currentMonthHours(currentMonthHoursCount)
-			.earningsChangePercentage(earningsChangePercentage)
 			.topProjects(topProjects)
-			.dailyEarnings(dailyEarnings)
 			.build();
 		
 		log.info("Dashboard stats calculated: {} projects, {} shifts, {} total",
@@ -146,9 +125,7 @@ public class DashboardService implements IDashboardService {
 			.currentMonthEarnings(BigDecimal.ZERO)
 			.currentMonthShifts(0)
 			.currentMonthHours(0)
-			.earningsChangePercentage(0)
 			.topProjects(Collections.emptyList())
-			.dailyEarnings(Collections.emptyList())
 			.build();
 	}
 	
@@ -179,53 +156,5 @@ public class DashboardService implements IDashboardService {
 			.hourlyRate(hourlyRate)
 			.build();
 	}
-	
-	/**
-	 * Рассчитать заработок по дням (последние 7 дней)
-	 */
-	private List<DailyEarningsDto> calculateDailyEarnings(List<Shift> allShifts) {
-		LocalDate today = LocalDate.now();
-		LocalDate sevenDaysAgo = today.minusDays(6);
-		
-		// Группируем смены по датам
-		Map<LocalDate, List<Shift>> shiftsByDate = allShifts.stream()
-			.filter(s -> !s.getDate().isBefore(sevenDaysAgo) && !s.getDate().isAfter(today))
-			.collect(Collectors.groupingBy(Shift::getDate));
-		
-		// Создаём запись для каждого дня (даже если смен нет)
-		List<DailyEarningsDto> dailyEarnings = new ArrayList<>();
-		
-		for (int i = 6; i >= 0; i--) {
-			LocalDate date = today.minusDays(i);
-			List<Shift> shiftsForDay = shiftsByDate.getOrDefault(date, Collections.emptyList());
-			
-			BigDecimal earnings = shiftsForDay.stream()
-				.map(Shift::getTotalPay)
-				.reduce(BigDecimal.ZERO, BigDecimal::add);
-			
-			dailyEarnings.add(DailyEarningsDto.builder()
-				.date(date.toString())
-				.earnings(earnings)
-				.shifts(shiftsForDay.size())
-				.build());
-		}
-		
-		return dailyEarnings;
-	}
-	
-	/**
-	 * Рассчитать процент изменения
-	 */
-	private int calculateChangePercentage(BigDecimal current, BigDecimal previous) {
-		if (previous.compareTo(BigDecimal.ZERO) == 0) {
-			return current.compareTo(BigDecimal.ZERO) > 0 ? 100 : 0;
-		}
-		
-		return current.subtract(previous)
-			.multiply(BigDecimal.valueOf(100))
-			.divide(previous, 0, RoundingMode.HALF_UP)
-			.intValue();
-	}
-	
 	
 }
